force-app/main/default/objects/Project__c/fields/ClientEmail__c.field-meta.xml
<CustomField>
    <fullName>ClientEmail__c</fullName>
    <label>Client Email</label>
    <type>Email</type>
</CustomField>