force-app/main/default/objects/Project__c/fields/ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode__c</fullName>
    <displayFormat>PROJ-{0000}</displayFormat>
    <label>Project Code</label>
    <type>AutoNumber</type>
</CustomField>