force-app/main/default/objects/Project__c/validationRules/BudgetGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>BudgetGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>Budget__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Budget__c</errorDisplayField>
    <errorMessage>Budget must be greater than 0.</errorMessage>
</ValidationRule>