force-app/main/default/objects/Project__c/validationRules/EndDateAfterStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateAfterStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(EndDate__c)) &amp;&amp; EndDate__c &lt;= StartDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date must be after Start Date.</errorMessage>
</ValidationRule>