force-app/main/default/objects/Project__c/validationRules/EndDateRequiredWhenCompleted.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateRequiredWhenCompleted</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Completed&quot;) &amp;&amp; ISBLANK(EndDate__c)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date is required when Status is Completed.</errorMessage>
</ValidationRule>