force-app/main/default/objects/Project__c/validationRules/ProjectNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ProjectNameRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ProjectName__c)</errorConditionFormula>
    <errorDisplayField>ProjectName__c</errorDisplayField>
    <errorMessage>Project Name is required.</errorMessage>
</ValidationRule>