force-app/main/default/objects/Project__c/validationRules/StartDateNotInPast.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateNotInPast</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>Start Date cannot be in the past.</errorMessage>
</ValidationRule>