force-app/main/default/objects/Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
    <sharedTo>
        <allInternalUsers>true</allInternalUsers>
    </sharedTo>
    <columns>ProjectName__c</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
</ListView>